src/parser.output
Terminals unused in grammar

   LBRACKET
   RBRACKET


State 19 conflicts: 1 shift/reduce
State 42 conflicts: 2 shift/reduce
State 51 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: expr END

    2 expr: expr SUPERSCRIPT expr
    3     | expr MULT expr
    4     | expr DIV expr
    5     | expr PLUS expr
    6     | expr MINUS expr
    7     | MINUS coll
    8     | coll

    9 coll: term felm
   10     | felm
   11     | term

   12 term: term term
   13     | dopn

   14 felm: LOG SUBSCRIPT LBRACE expr RBRACE expr
   15     | LG expr
   16     | LN expr
   17     | LOG expr
   18     | COT expr
   19     | SEC expr
   20     | CSC expr
   21     | TAN expr
   22     | COS expr
   23     | SIN expr

   24 dopn: dopn SUPERSCRIPT dopn
   25     | dpnt
   26     | sclr
   27     | prth

   28 dpnt: IDENT

   29 sclr: NUMBER

   30 prth: LPAREN expr RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENT (258) 28
NUMBER (259) 29
PLUS (260) 5
MINUS (261) 6 7
MULT (262) 3
DIV (263) 4
SIN (264) 23
COS (265) 22
TAN (266) 21
CSC (267) 20
SEC (268) 19
COT (269) 18
LOG (270) 14 17
LN (271) 16
LG (272) 15
SUPERSCRIPT (273) 2 24
SUBSCRIPT (274) 14
LPAREN (275) 30
RPAREN (276) 30
LBRACE (277) 14
RBRACE (278) 14
LBRACKET (279)
RBRACKET (280)
END (281) 1


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
input (28)
    on left: 1, on right: 0
expr (29)
    on left: 2 3 4 5 6 7 8, on right: 1 2 3 4 5 6 14 15 16 17 18 19
    20 21 22 23 30
coll (30)
    on left: 9 10 11, on right: 7 8
term (31)
    on left: 12 13, on right: 9 11 12
felm (32)
    on left: 14 15 16 17 18 19 20 21 22 23, on right: 9 10
dopn (33)
    on left: 24 25 26 27, on right: 13 24
dpnt (34)
    on left: 28, on right: 25
sclr (35)
    on left: 29, on right: 26
prth (36)
    on left: 30, on right: 27


State 0

    0 $accept: . input $end

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    input  go to state 14
    expr   go to state 15
    coll   go to state 16
    term   go to state 17
    felm   go to state 18
    dopn   go to state 19
    dpnt   go to state 20
    sclr   go to state 21
    prth   go to state 22


State 1

   28 dpnt: IDENT .

    $default  reduce using rule 28 (dpnt)


State 2

   29 sclr: NUMBER .

    $default  reduce using rule 29 (sclr)


State 3

    7 expr: MINUS . coll

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    coll  go to state 23
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 4

   23 felm: SIN . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 24
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 5

   22 felm: COS . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 25
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 6

   21 felm: TAN . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 26
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 7

   20 felm: CSC . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 27
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 8

   19 felm: SEC . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 28
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 9

   18 felm: COT . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 29
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 10

   14 felm: LOG . SUBSCRIPT LBRACE expr RBRACE expr
   17     | LOG . expr

    IDENT      shift, and go to state 1
    NUMBER     shift, and go to state 2
    MINUS      shift, and go to state 3
    SIN        shift, and go to state 4
    COS        shift, and go to state 5
    TAN        shift, and go to state 6
    CSC        shift, and go to state 7
    SEC        shift, and go to state 8
    COT        shift, and go to state 9
    LOG        shift, and go to state 10
    LN         shift, and go to state 11
    LG         shift, and go to state 12
    SUBSCRIPT  shift, and go to state 30
    LPAREN     shift, and go to state 13

    expr  go to state 31
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 11

   16 felm: LN . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 32
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 12

   15 felm: LG . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 33
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 13

   30 prth: LPAREN . expr RPAREN

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 34
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 14

    0 $accept: input . $end

    $end  shift, and go to state 35


State 15

    1 input: expr . END
    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr

    PLUS         shift, and go to state 36
    MINUS        shift, and go to state 37
    MULT         shift, and go to state 38
    DIV          shift, and go to state 39
    SUPERSCRIPT  shift, and go to state 40
    END          shift, and go to state 41


State 16

    8 expr: coll .

    $default  reduce using rule 8 (expr)


State 17

    9 coll: term . felm
   11     | term .
   12 term: term . term

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    $default  reduce using rule 11 (coll)

    term  go to state 42
    felm  go to state 43
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 18

   10 coll: felm .

    $default  reduce using rule 10 (coll)


State 19

   13 term: dopn .
   24 dopn: dopn . SUPERSCRIPT dopn

    SUPERSCRIPT  shift, and go to state 44

    SUPERSCRIPT  [reduce using rule 13 (term)]
    $default     reduce using rule 13 (term)


State 20

   25 dopn: dpnt .

    $default  reduce using rule 25 (dopn)


State 21

   26 dopn: sclr .

    $default  reduce using rule 26 (dopn)


State 22

   27 dopn: prth .

    $default  reduce using rule 27 (dopn)


State 23

    7 expr: MINUS coll .

    $default  reduce using rule 7 (expr)


State 24

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   23 felm: SIN expr .

    $default  reduce using rule 23 (felm)


State 25

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   22 felm: COS expr .

    $default  reduce using rule 22 (felm)


State 26

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   21 felm: TAN expr .

    $default  reduce using rule 21 (felm)


State 27

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   20 felm: CSC expr .

    $default  reduce using rule 20 (felm)


State 28

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   19 felm: SEC expr .

    $default  reduce using rule 19 (felm)


State 29

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   18 felm: COT expr .

    $default  reduce using rule 18 (felm)


State 30

   14 felm: LOG SUBSCRIPT . LBRACE expr RBRACE expr

    LBRACE  shift, and go to state 45


State 31

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   17 felm: LOG expr .

    $default  reduce using rule 17 (felm)


State 32

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   16 felm: LN expr .

    $default  reduce using rule 16 (felm)


State 33

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   15 felm: LG expr .

    $default  reduce using rule 15 (felm)


State 34

    2 expr: expr . SUPERSCRIPT expr
    3     | expr . MULT expr
    4     | expr . DIV expr
    5     | expr . PLUS expr
    6     | expr . MINUS expr
   30 prth: LPAREN expr . RPAREN

    PLUS         shift, and go to state 36
    MINUS        shift, and go to state 37
    MULT         shift, and go to state 38
    DIV          shift, and go to state 39
    SUPERSCRIPT  shift, and go to state 40
    RPAREN       shift, and go to state 46


State 35

    0 $accept: input $end .

    $default  accept


State 36

    5 expr: expr PLUS . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 47
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 37

    6 expr: expr MINUS . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 48
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 38

    3 expr: expr MULT . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 49
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 39

    4 expr: expr DIV . expr

    IDENT   shift, and go to state 1
    NUMBER  shift, and go to state 2
    MINUS   shift, and go to state 3
    SIN     shift, and go to state 4
    COS     shift, and go to state 5
    TAN     shift, and go to state 6
    CSC     shift, and go to state 7
    SEC     shift, and go to state 8
    COT     shift, and go to state 9
    LOG     shift, and go to state 10
    LN      shift, and go to state 11
    LG      shift, and go to state 12
    LPAREN  shift, and go to state 13

    expr  go to state 50
    coll  go to state 16
    term  go to state 17
    felm  go to state 18
    dopn  go to state 19
    dpnt  go to state 20
    sclr  go to state 21
    prth  go to state 22


State 40

    2 expr: expr SUPERSCRIPT . expr
